RESOLVED FIXED159723
AX: [ATK] spinbutton-crash.html fails
https://bugs.webkit.org/show_bug.cgi?id=159723
Summary AX: [ATK] spinbutton-crash.html fails
Joanmarie Diggs
Reported 2016-07-13 09:55:06 PDT
This test was introduced in r203083 and fails because it depends on a WKTR method which is not implemented for ATK because it appears to be specific to AXAPI. That said, we can fake it for spin buttons and by doing so keep the failing test cross-platform. I'll do that later today.
Attachments
Patch (4.87 KB, patch)
2016-07-13 11:21 PDT, Joanmarie Diggs
no flags
Radar WebKit Bug Importer
Comment 1 2016-07-13 09:55:28 PDT
Joanmarie Diggs
Comment 2 2016-07-13 11:21:17 PDT
WebKit Commit Bot
Comment 3 2016-07-13 12:12:43 PDT
Comment on attachment 283551 [details] Patch Clearing flags on attachment: 283551 Committed r203170: <http://trac.webkit.org/changeset/203170>
WebKit Commit Bot
Comment 4 2016-07-13 12:12:47 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.