AX: [ATK] spinbutton-crash.html fails https://bugs.webkit.org/show_bug.cgi?id=159723

Reviewed by Chris Fleizach.

Tools:

Implement support for AXDecrementButton and AXIncrementButton in
ATK's AccessibilityUIElement::uiElementAttributeValue().

* WebKitTestRunner/InjectedBundle/atk/AccessibilityUIElementAtk.cpp:
(WTR::AccessibilityUIElement::uiElementAttributeValue):

LayoutTests:

In ATK, the accessible object for an input element has no children for
the text component. As a result, the spinner is the first and only child.
In AXAPI, the input element has an AXGroup child for the text component.
As a result, the spinner is the second of two children. Therefore, add a
helper method to accessibility-helper.js to retrieve the correct child
for the current platform use it in spinbutton-crash.html.

* accessibility/spinbutton-crash.html: Modified.
* resources/accessibility-helper.js:
(spinnerForTextInput): Added.


Canonical link: https://commits.webkit.org/177870@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@203170 268f45cc-cd09-0410-ab3c-d52691b4dbfc